1999-07-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garpar.ads, s-garpar.adb: Export Dump_Partition_Table so that
	it can be used to debug the termination algorithm.
	Fix bug in Online_Partitions (was using Is_Known instead of
	Is_Online).
	Rewrite Matching_Partitions more efficiently.

1999-07-28  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Remove reference to Termination_Shutdown.

	* s-garter.adb: Implement new wave-based algorithm. This one
	should work in all the cases, even in presence of messages in
	transit.

	* s-gasoli.ads, s-gasoli.adb: Remove *Termination_Shutdown
	subprograms as they are not used anymore.

	* s-garpar.ads, s-garpar.adb: New subprogram Has_Local_Termination 
	used by the termination algorithm.

1999-07-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garpar.adb, s-garpar.ads: Add new subprograms Set_Online and
 	Online_Partitions to get the list of partitions a partition has
 	communicated with.

	* s-gartcp.adb: Call Set_Online subprogram to signal whether the
	current partition has a connection with a given partition.

	* s-garhea.adb: When we send a message is sent to boot server,
	retry only when the boot server partition id has changed.

	* s-garpar.adb: (Get_Partition_Info) Send request on a partition
	outside the mutex. (Next_Boot_Mirror) Do not raise Program_Error,
	add an assertion failure.

	* s-garuni.adb: Add new function Dump_Request_List.
 	(Store_New_Unit) Do not replace pending request list, but merge
	the existing one with the new one.
 
1999-07-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuni.adb: Iterator missing in Insert.

	* Makefile.am, Makefile.in: Directory separator missing.

1999-07-21  Laurent Pautet  <pautet@dorine.enst.fr>

        * s-gargro.adb: Remove visibility on Partitions.Table. Rename
        Send_Neighbor into Send_Next_Mirror.

        * s-gargro.ads: Remove unused withed package.

        * s-garhea.adb: Remove visibility on Partitions.Table. Remove