@@ -1,3 +1,8 @@
+1999-08-17  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-garter.adb: Change use of global critical section into use of
+ 	specific mutex to avoid deadlocks.
+
 1999-07-29  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-garpar.ads, s-garpar.adb: Export Dump_Partition_Table so that
